fixed bug causing inaccurate width of experienceMenu div. Increased vertical margin for experienceMenu

--- a/index.html
+++ b/index.html
@@ -26,9 +26,8 @@
           align-items: center;
           justify-content: center;
           position: absolute;
-          top: 0;
+          top: var(--workSectionSpacing);
           left: calc(var(--translateXval) * -1);
-          width: calc(var(--translateXval) * 2 - var(--workSectionSpacing));
           margin: var(--workSectionSpacing) 0;
         "
       >
