added all text to a div with a border and border-radius. Refactored css in external file. modified css applied to .contactSection and its child elements

--- a/index.html
+++ b/index.html
@@ -225,11 +225,22 @@
       </div>
     </div>
     <div class="contactSection" style="position: relative">
-      <h1 class="overlayTxt" style="top: 1%; font-size: 3em">(928) 679-5861</h1>
-      <div class="overlayTxt" style="bottom: 1%">
+      <div
+        class="overlayTxt"
+        style="
+          bottom: 1%;
+          text-align: left;
+          text-wrap: nowrap;
+          width: auto;
+          border: 1px solid white;
+          border-radius: 10px;
+          margin-bottom: 1em;
+        "
+      >
+        <h1 style="padding-left: 1em">(928) 679-5861</h1>
         <ul
           class="servicesList"
-          style="text-wrap: pretty; list-style-type: none"
+          style="padding-right: 1em; line-height: 2em; list-style: circle"
         >
           <li>Weekly * Bi-Weekly * Monthly Yard Maintenance</li>
           <li>Shrub & Hedge Trimming</li>
