--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>V's Yard Service</title>
+    <link rel="icon" type="image/x-icon" href="images/logo.ico?v1" />
     <link rel="stylesheet" href="style.css" />
     <script defer src="script.js"></script>
   </head>
