incorporated new trimming related pictures into webpage

--- a/index.html
+++ b/index.html
@@ -168,6 +168,36 @@
               <img src="images/trimming/after6.jpg" alt="" />
             </div>
           </div>
+          <div class="contentHorizontal" style="display: none">
+            <div class="beforePhoto">
+              <div class="title" style="margin-top: 0">Before</div>
+              <img src="images/trimming/before7.jpg" alt="" />
+            </div>
+            <div class="afterPhoto">
+              <div class="title">After</div>
+              <img src="images/trimming/after7.jpg" alt="" />
+            </div>
+          </div>
+          <div class="contentHorizontal" style="display: none">
+            <div class="beforePhoto">
+              <div class="title" style="margin-top: 0">Before</div>
+              <img src="images/trimming/before8.jpg" alt="" />
+            </div>
+            <div class="afterPhoto">
+              <div class="title">After</div>
+              <img src="images/trimming/after8.jpg" alt="" />
+            </div>
+          </div>
+          <div class="contentHorizontal" style="display: none">
+            <div class="beforePhoto">
+              <div class="title" style="margin-top: 0">Before</div>
+              <img src="images/trimming/before9.jpg" alt="" />
+            </div>
+            <div class="afterPhoto">
+              <div class="title">After</div>
+              <img src="images/trimming/after9.jpg" alt="" />
+            </div>
+          </div>
         </div>
         <div
           class="prevWork"
