--- a/index.html
+++ b/index.html
@@ -239,6 +239,16 @@
               <img src="images/handyman/after3.jpg" alt="" />
             </div>
           </div>
+          <div class="contentHorizontal" style="display: none">
+            <div class="beforePhoto">
+              <div class="title" style="margin-top: 0">Final Product</div>
+              <img src="images/handyman/final4.jpg" alt="" />
+            </div>
+            <div class="afterPhoto">
+              <div class="title">Final Product</div>
+              <img src="images/handyman/final5.jpg" alt="" />
+            </div>
+          </div>
         </div>
         <svg
           id="rightArrow"
