--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>V's Yard Service</title>
+    <link rel="icon" type="image/x-icon" href="images/logo.ico?v1" />
     <link rel="stylesheet" href="style.css" />
     <script defer src="script.js"></script>
   </head>
@@ -167,6 +168,36 @@
               <img src="images/trimming/after6.jpg" alt="" />
             </div>
           </div>
+          <div class="contentHorizontal" style="display: none">
+            <div class="beforePhoto">
+              <div class="title" style="margin-top: 0">Before</div>
+              <img src="images/trimming/before7.jpg" alt="" />
+            </div>
+            <div class="afterPhoto">
+              <div class="title">After</div>
+              <img src="images/trimming/after7.jpg" alt="" />
+            </div>
+          </div>
+          <div class="contentHorizontal" style="display: none">
+            <div class="beforePhoto">
+              <div class="title" style="margin-top: 0">Before</div>
+              <img src="images/trimming/before8.jpg" alt="" />
+            </div>
+            <div class="afterPhoto">
+              <div class="title">After</div>
+              <img src="images/trimming/after8.jpg" alt="" />
+            </div>
+          </div>
+          <div class="contentHorizontal" style="display: none">
+            <div class="beforePhoto">
+              <div class="title" style="margin-top: 0">Before</div>
+              <img src="images/trimming/before9.jpg" alt="" />
+            </div>
+            <div class="afterPhoto">
+              <div class="title">After</div>
+              <img src="images/trimming/after9.jpg" alt="" />
+            </div>
+          </div>
         </div>
         <div
           class="prevWork"
@@ -206,6 +237,16 @@
             <div class="afterPhoto">
               <div class="title">After</div>
               <img src="images/handyman/after3.jpg" alt="" />
+            </div>
+          </div>
+          <div class="contentHorizontal" style="display: none">
+            <div class="beforePhoto">
+              <div class="title" style="margin-top: 0">Final Product</div>
+              <img src="images/handyman/final4.jpg" alt="" />
+            </div>
+            <div class="afterPhoto">
+              <div class="title">Final Product</div>
+              <img src="images/handyman/final5.jpg" alt="" />
             </div>
           </div>
         </div>
